--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,32 @@
-pluginManagement { includeBuild("../node_modules/@react-native/gradle-plugin") }
-plugins { id("com.facebook.react.settings") }
-extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand() }
-rootProject.name = 'nuri'
-include ':app'
-includeBuild('../node_modules/@react-native/gradle-plugin')
+// 파일: android/settings.gradle
+// 목적:
+// - RN Gradle Plugin을 "로컬 includeBuild"로 플러그인 해석에 연결
+// - plugins DSL에서 com.facebook.react.* 플러그인을 정상 인식시키기 위함
+
+pluginManagement {
+  repositories {
+    gradlePluginPortal()
+    google()
+    mavenCentral()
+  }
+  includeBuild("../node_modules/@react-native/gradle-plugin")
+}
+
+plugins {
+  id("com.facebook.react.settings")
+}
+
+dependencyResolutionManagement {
+  repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+  repositories {
+    google()
+    mavenCentral()
+  }
+}
+
+extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
+  ex.autolinkLibrariesFromCommand()
+}
+
+rootProject.name = "nuri"
+include(":app")
