--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # OSX
 #
-.DS_Store
+ **/.DS_Store
 
 # Xcode
 #
@@ -73,3 +73,7 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Android bugreport
+android/bugreport-*.zip
+android/bugreport*.zip
