chore: supabase 로컬 키 파일 분리 및 예시 추가
src/services/supabase/config.ts를 git에서 제거(키 유출 방지)

config.example.ts 추가 및 .gitignore로 로컬 설정 파일 제외

Home 화면 일부 스타일/구현 정리

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ yarn-error.log
 # Android bugreport
 android/bugreport-*.zip
 android/bugreport*.zip
+
+# Supabase (local only)
+src/services/supabase/config.ts
