--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^3.0.1",
     "@react-native/new-app-screen": "0.84.0",
-    "@react-navigation/native": "^7.1.28",
-    "@react-navigation/native-stack": "^7.13.0",
+    "@react-navigation/native": "^7.1.31",
+    "@react-navigation/native-stack": "^7.14.2",
     "@supabase/supabase-js": "^2.97.0",
     "buffer": "^6.0.3",
     "react": "19.2.3",
@@ -22,10 +22,11 @@
     "react-native-gesture-handler": "^2.30.0",
     "react-native-get-random-values": "^2.0.0",
     "react-native-image-picker": "^8.2.1",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.23.0",
+    "react-native-safe-area-context": "^5.7.0",
+    "react-native-screens": "^4.24.0",
     "react-native-url-polyfill": "^3.0.0",
-    "styled-components": "^6.3.11"
+    "styled-components": "^6.3.11",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
