--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.14.2",
     "@supabase/supabase-js": "^2.97.0",
     "buffer": "^6.0.3",
+    "dayjs": "^1.11.19",
     "react": "19.2.3",
     "react-native": "0.84.0",
     "react-native-gesture-handler": "^2.30.0",
